Fix IE vertical alignment

--- a/app/code/SomethingDigital/PageBuilderCustomizations/view/adminhtml/web/css/source/content-type/banner/_default.less
+++ b/app/code/SomethingDigital/PageBuilderCustomizations/view/adminhtml/web/css/source/content-type/banner/_default.less
@@ -10,6 +10,7 @@
 
     .pagebuilder-banner-wrapper {
         position: relative;
+        height: 0; //IE fix when min-height set
 
         .pagebuilder-overlay {
             padding: 15px;
@@ -17,6 +18,14 @@
             @media only screen and (min-width: 769px) {
               padding: 30px;
             }
+        }
+    }
+
+    &[data-appearance="poster"] .pagebuilder-banner-wrapper {
+        height: auto;
+
+        .pagebuilder-poster-overlay {
+            height: 0; //IE fix when min-height set
         }
     }
 
